fix logo on safari

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -15,6 +15,12 @@
   @include focus-rainbow;
 }
 
+.logo
+{
+  width: 100%;
+  height: 100%;
+}
+
 .menu-toggle
 {
   @extend .cta-icon;
